# dppl_code

./: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  HISTORY  README.md  index.html  params.json
cmake/Modules/: FindCxxopts.cmake  FindOgdf.cmake  FindStacktrace.cmake
data/: prDubins1.par  testing.gml  testing2.gml  triangle_polygon.dlm
data/experiment/: 2015.11.07_east4wp_local.csv  2015.11.07_phoenixflight1_3tours.eps  2015.11.07_phoenixflight1_gps.csv  2015.11.07_phoenixtour_notes.md  2015.11.07_ptp_tour.csv  2015.11.07_ptp_tour.gml  2015.11.18_cpp_polygon.gml  2015.11.18_cpp_tour.csv  2015.11.18_phoenixflight2_gps.csv  phoenixflight1Data.m  phoenixflight2.m
data/flightData/: 2015.11.07_phoenixflight1_gpsraw.csv  phoenixflight1Data.m
data/test/cpp/: isoscelesTrapezoid.gml  isoscelesTriangle.gml  nonConvexPolygon.gml  rectangle.gml  rightTriangle.gml  square.gml  trapezoid.gml
data/test/dtsp/: square-36wp.gml  triangle-27wp.gml  triangle-8wp.dot  triangle-8wp.gml
data/trash/: square_polygon.dlm  square_polygon.gml  testing.dot  testing.gml  triangle_polygon.dlm  triangle_polygon.gml
examples/: CMakeLists.txt  CMakeLists_example.txt  README.md  cscope.out  directed_graph_test.cpp  manual.cpp  random.cpp  solveDTSP_example.cpp  solveDtspSimple_example.cpp  write_graphviz.cpp
examples/boost/: dubins_graph_test.cpp  euclidean_tsp.cpp  read_graphviz.cpp
examples/ogdf/: CMakeLists.txt  manual.cpp  sierpinski.cpp
examples/snap/: CMakeLists.txt  directed_graph1.cpp
include/: Configuration.h  Dubins.h  Log.h  NodeMatrix.h  TSPLib.h  Util.h  solveCpp.h  solveCppAsDtsp.h  solveDTSP.h  solveDtsp.h  stacktrace.h
include/dpp/basic/: Field.h  FieldTrack.h  FileIO.h  Logger.h  NodeMatrix.h  Path.h  TSPIO.h  Util.h  VehicleConfiguration.h  basic.h
include/dpp/planalg/: Algorithm.h  AlternatingDTSP.h  AlternatingDtsp.h  BoustrophedonCpp.h  FieldTracksCpp.h  NearestNeighborDTSP.h  NearestNeighborDtsp.h  RandomizedDTSP.h  RandomizedDtsp.h
include/dpp/planner/: CoverageWaypointPlanner.h  DubinsSensorPathPlanner.h  DubinsVehiclePathPlanner.h  PathPlanner.h  PathPlannerException.h  WaypointSequencePlanner.h
lib/: .gitignore  README.md
src/: CMakeLists.txt  Dubins.cpp  TSPLib.cpp  alternatingDTSP.cpp  computeDubinsDistancesATSP.cpp  dubinsAreaCoverage_interface.cpp  main.cpp  nearestNeighborDTSP.cpp  nearestNeighborETSP.cpp  optimalEuclideanTSP.cpp  randomizedDTSP.cpp  solveCpp.cpp  solveCppAsDtsp.cpp  solveDTSP.cpp  solveDtsp.cpp
src/dpp/basic/: Field.cpp  FieldTrack.cpp  FileIO.cpp  Logger.cpp  Path.cpp  TSPIO.cpp  basic.cpp
src/dpp/planalg/: Algorithm.cpp  AlternatingDTSP.cpp  AlternatingDtsp.cpp  BoustrophedonCpp.cpp  FieldTracksCpp.cpp  NearestNeighborDTSP.cpp  NearestNeighborDtsp.cpp  RandomizedDTSP.cpp  RandomizedDtsp.cpp  alternatingDTSP.cpp  randomizedDTSP_old.cpp
src/dpp/planner/: CoverageWaypointPlanner.cpp  DubinsSensorPathPlanner.cpp  DubinsVehiclePathPlanner.cpp  PathPlanner.cpp  WaypointSequencePlanner.cpp
src/mex/: dubinsAlternating_interface.cpp  dubinsNearestNeighbor_interface.cpp  dubinsNearest_interface.cpp  dubinsRandomized_interface.cpp  mexHelper.cpp  mexHelper.h  solveCppAsDtsp_interface.cpp  solveCpp_interface.cpp  solveDTSP_interface.cpp  solveDtsp_interface.cpp
test/: .gitignore  CMakeLists.txt  DubinsPathPlanner_test.h  DubinsUnitTest.cpp  UtilUnitTest.cpp
test/basic/: Field_test.cpp  FileIO_test.cpp  Logger_test.cpp  Path_test.cpp  Util_test.cpp
test/planalg/: AlternatingDTSP_test.cpp  AlternatingDtsp_test.cpp  NearestNeighborDTSP_test.cpp  NearestNeighborDtsp_test.cpp  RandomizedDTSP_test.cpp  RandomizedDtsp_test.cpp
test/planner/: CoverageWaypointPlanner_test.cpp  DubinsSensorPathPlanner_test.cpp  DubinsVehiclePathPlanner_test.cpp  WaypointSequencePlanner_test.cpp
trash/: DebugStackTrace.cpp  DebugStackTrace.h  Dubins.hpp
